--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = MooseX-DefaultMethodNames
+name    = MooseX-DefaultMethods
 author  = Chris Prather <chris@prather.org>
 license = Perl_5
 copyright_holder = Chris Prather
